# whatsapp-rust-GTK4

./: Cargo.toml  README.md
docs/: WORKFLOW.md
src/: app.rs  audio.rs  config.rs  main.rs  model.rs
src/backend/: bridge.rs  client.rs  mod.rs  runtime.rs
src/store/: mod.rs
src/ui/: chat_list.rs  chat_object.rs  login.rs  media_grid.rs  media_viewer.rs  mod.rs  profile.rs  thread.rs  window.rs
src/util/: mod.rs  preview.rs  qr.rs  text.rs
