[package]
name = "whatsapp-rust-gtk4"
version = "0.1.0"
edition = "2021"
rust-version = "1.80"
license = "GPL-3.0-or-later"
description = "Native GTK4 + libadwaita WhatsApp client written in Rust"
repository = "https://github.com/Matt/whatsapp-rust-GTK4"
default-run = "whatsapp-rust-gtk4"

[dependencies]
# --- GTK / libadwaita -------------------------------------------------------
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }

# --- WhatsApp protocol backend (pinned exact: young crate, breaking changes) -
# `simd` is intentionally NOT enabled: it pulls `portable_simd`, which requires a
# nightly toolchain. We stick to stable, so we opt out of default features and
# re-enable everything except `simd`.
whatsapp-rust = { version = "=0.6.0", default-features = false, features = [
    # NOTE: `moka-cache` was removed upstream after 0.6.0; the cache now falls
    # back to the portable backend. Do not re-add here.
    "sqlite-storage",
    "tokio-transport",
    "tokio-runtime",
    "ureq-client",
    "tokio-native",
    "signal",
] }
whatsapp-rust-sqlite-storage = "=0.6.0"
whatsapp-rust-tokio-transport = "=0.6.0"
whatsapp-rust-ureq-http-client = "=0.6.0"
# Only needed for the `Event` type; default features would re-enable `simd`.
wacore = { version = "=0.6.0", default-features = false }

# --- async runtime + bridge -------------------------------------------------
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
async-channel = "2"

# --- application state DB (our own chat/message store) -----------------------
# rusqlite must share the SAME libsqlite3-sys (bundled) that whatsapp-rust's
# sqlite-storage pulls, so SQLite is compiled and linked once (no duplicate
# `links = "sqlite3"` conflict). The pinned whatsapp-rust revision (see the
# [patch] block) uses libsqlite3-sys ^0.37, which rusqlite 0.39 also uses.
# Re-check this match whenever bumping either pin.
rusqlite = "=0.39.0"

# --- QR rendering (we rasterize the module matrix ourselves, no image dep) ---
qrcode = { version = "0.14", default-features = false }

# --- profile-picture download (blocking GET in spawn_blocking) ---------------
# whatsapp-rust returns a CDN URL for avatars but does NOT download it, so we
# fetch the bytes ourselves. ureq 3 (with rustls TLS) is already in the tree via
# whatsapp-rust-ureq-http-client; reuse it to avoid a second HTTP/TLS stack.
ureq = "3"

# --- errors + logging -------------------------------------------------------
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
lto = "thin"
strip = true

# whatsapp-rust is pinned to a git revision (no published release past 0.6.0):
# the released 0.6.0 fails the post-login critical app-state sync ("didn't find
# app state key"), which the HEAD code fixes — unlocking Connected, saved contact
# names, and archived/pin/mute state. All workspace crates are pinned to ONE
# revision so they resolve together. Bump deliberately (young, fast-moving).
[patch.crates-io]
whatsapp-rust = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "d441e5fa2d09b5aaaef966d00fa7d18e7df04a30" }
wacore = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "d441e5fa2d09b5aaaef966d00fa7d18e7df04a30" }
waproto = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "d441e5fa2d09b5aaaef966d00fa7d18e7df04a30" }
whatsapp-rust-sqlite-storage = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "d441e5fa2d09b5aaaef966d00fa7d18e7df04a30" }
whatsapp-rust-tokio-transport = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "d441e5fa2d09b5aaaef966d00fa7d18e7df04a30" }
whatsapp-rust-ureq-http-client = { git = "https://github.com/jlucaso1/whatsapp-rust", rev = "d441e5fa2d09b5aaaef966d00fa7d18e7df04a30" }
